Fix global.css main overflow issue

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -302,6 +302,10 @@ footer > p > a {
 
 /* Laptops and other screens */
 @media screen and (min-width: 1200px) {
+    
+    main {
+        width: 66%;
+    }
 
     main > section {
         flex-direction: row;
